Add best scored users payload to stats, payloads stored to redis
