# backend/docs/swagger.json
@@ -172,6 +172,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "User payload",
+                        "name": "payload",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Telegram init data",
                         "name": "initData",
                         "in": "query"
@@ -190,6 +196,12 @@
                 },
                 "bestTodaysDuration": {
                     "type": "integer"
+                },
+                "bestUsersPayloads": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "countActive": {
                     "type": "integer"
